# resolution

./: Cargo.toml  LICENSE.txt  README.md  example.res  mistakes.res
design/: AST.md  parser.md
src/: ast.rs  cnf.rs  common.rs  expressions.rs  fileparser.rs  gui.rs  lib.rs  main.rs  resolution_graph.rs  test.txt
